tdf#162003 qt: Add fall back for dark mode detection

For Qt >= 6.5, only rely on the color scheme reported
via `QApplication::styleHints()->colorScheme()` if it
is explicitly `Qt::ColorScheme::Light` or
`Qt::ColorScheme::Dark`.

For the `Qt::ColorScheme::Unknown` case, fall back
to the same mechanism used for Qt < 6.5, where
that API was not available yet.

This e.g. works around an issue with plasma-integration
currently always reporting `Qt::ColorScheme::Unknown`.
Suggested upstream fix:
https://invent.kde.org/plasma/plasma-integration/-/merge_requests/149

Change-Id: Iae022f7bcff3e7758d655006ec78602e08b50b56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172467
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins
(cherry picked from commit 6b0b28d66ae79c1cbb7545b4b40dd3682f20ff72)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172486
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>